--- a/assets/styleguide/components/_gallery.scss
+++ b/assets/styleguide/components/_gallery.scss
@@ -1,15 +1,15 @@
 .gallery {
-  padding: 20px;
-
   &__inner {
     margin: auto;
     max-width: 1400px;
   }
 
   &__row {
-    display: grid;
-    grid-column-gap: 30px;
-    margin-bottom: 30px;
+    @include breakpoint($tablet) {
+      display: grid;
+      grid-column-gap: 30px;
+      margin-bottom: 30px;
+    }
 
     &--fifty-fifty {
       @include breakpoint($tablet) {
@@ -32,7 +32,7 @@
 
   &__item {
     height: 100%;
-    margin: 0;
+    margin: 0 0 30px;
   }
 
   &__image {
