--- a/assets/styleguide/components/_project-grid.scss
+++ b/assets/styleguide/components/_project-grid.scss
@@ -18,6 +18,7 @@
     display: grid;
     grid-row-gap: 40px;
     grid-template-columns: 1fr;
+    margin: auto;
     max-width: 1200px;
     padding: 0 20px;
     width: 100%;
@@ -75,12 +76,12 @@
 
   &__name {
     color: #000;
-    font-size: 16px;
+    font-size: 14px;
     text-align: center;
     transition: opacity 0.1s ease-in-out;
 
     @include breakpoint($tablet) {
-      font-size: 18px;
+      font-size: 16px;
       opacity: 0;
     }
   }
